tests/rename/should_compile/T24084_B.hs

{-# LANGUAGE NoImplicitPrelude #-}

module T24084_B (module T24084_A) where

import T24084_A

