tests/rename/should_fail/T25899e3.hs
{-# LANGUAGE ExplicitNamespaces #-}

module T25899e3 where

import T25899e_helper (data MkT)  -- rejected: MkT not in the data namespace
